fix the youtube bug

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <option value="Project1">To Do</option>
                   <option value="Project2">Doing</option>
                   <option value="Project2">Done</option>
-                  <option value="Project2" id="youtube">Overdue</option>
+                  <option value="Project2">Overdue</option>
                 </select>
               </div>
             </div>
@@ -167,7 +167,7 @@
       <div class="grid-item item1 task-container">To Do</div>
       <div class="grid-item item2 task-container">Doing</div>
       <div class="grid-item item3 task-container">Done</div>
-      <div class="grid-item item4 task-container">Overdue</div>
+      <div class="grid-item item4 task-container" id="youtube">Overdue</div>
     </div>
   </div>
 
